Changed black color

--- a/index2.css
+++ b/index2.css
@@ -5,7 +5,7 @@
 	font-size: 80px;
 	font-weight: 200;
 	text-align: center;
-	color: #b83f40;
+	color: #111111;
 	/*color: #b83f45;*/
 	-webkit-text-rendering: optimizeLegibility;
 	-moz-text-rendering: optimizeLegibility;
